--- a/smart_gestao_backend/package.json
+++ b/smart_gestao_backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "passport": "^0.7.0",
