--- a/smart_gestao_backend/package.json
+++ b/smart_gestao_backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
