--- a/smart_gestao_app/package.json
+++ b/smart_gestao_app/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
